removing build warnings
by moving add-exports only where is needed:
[WARNING] module name in --add-exports option not found: hosh.runtime